add authz, refactor web in future autogen style
