# api/api.yml
@@ -37,7 +37,11 @@ objects:
   ListSchedulersResponse:
     Schedulers: "[]*Scheduler"
     NextPageToken: string
+  LoginRequest:
+    Username: string
+    Password: string
 
+# TODO: s/routes/api/
 routes:
   /jobs:
     GET:
@@ -97,3 +101,28 @@ routes:
       response_body: "*Scheduler"
     DELETE:
       name: DeleteScheduler
+
+# TODO: implement in generator
+web:
+  /:
+    GET:
+      name: GetHome
+  /jobs/{jobID}:
+    GET:
+      name: GetJob
+  /schedulers/{schedulerID}:
+    GET:
+      name: GetScheduler
+  /login:
+    GET:
+      name: GetLogin
+  /login:
+    POST:
+      name: PostLogin
+      request_body: "*LoginRequest"
+  /logout:
+    GET:
+      name: GetLogout
+  /secret:
+    GET:
+      name: GetSecret
